--- a/web/src/App.css
+++ b/web/src/App.css
@@ -344,10 +344,11 @@
 .todo-content {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     width: 100%;
     height: 12%;
+    margin-top: 5px;
+    justify-content: space-between;
+    align-items: center;
     transition: 1s;
 }
 
@@ -366,7 +367,11 @@
 }
 
 .todo-icons {
-    flex: 1
+    display: flex;
+    width: 20%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .todo-icon {
@@ -375,7 +380,6 @@
 }
 
 .icon-button {
-    /* display: none; */
     border: none;
     background-color:transparent;
 }
@@ -383,8 +387,8 @@
 .task-container {
     display: flex;
     flex-direction: column;
-    /* width: 82%; */
-    margin-left: 3%;
+    width: 80%;
+    margin-left: 3%; 
 }
 
 .task-text {
@@ -542,6 +546,10 @@
 
 .over-y {
     overflow-y: auto;
+}
+
+.over-x {
+    overflow-x: auto;
 }
 
 .no-scroll {
